# performance-comparison-cv

./: .gitignore  README.md  measure.py  requirements.txt
exampleCpp/: CMakeLists.txt  exampleCpp.cpp  exampleCpp.h
exampleCppFfmpeg/: CMakeLists.txt  exampleCppFfmpeg.cpp  exampleCppFfmpeg.h
examplePython/: main.py
